# cchess

./: .gitignore  CMakeLists.txt  build.sh  main.c
src/: chess_utils.c  chess_utils.h  move_checks.c  move_checks.h
